add funcao ler tecla pressionada

--- a/wokwi.toml
+++ b/wokwi.toml
@@ -1,4 +1,4 @@
 [wokwi]
 version = 1
-firmware = 'build\tarefa_teclado_matricial.hex'
-elf = 'build\tarefa_teclado_matricial.elf'
+firmware = 'build/tarefa_teclado_matricial.uf2'
+elf = 'build/tarefa_teclado_matricial.elf'
